--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -66,12 +66,12 @@ nav.home-nav
     vertical-align: top
     height: 100%
     border: none
-    &:first-of-type
-      width: 410px
-    &:nth-of-type(2)
-      width: 345px
     &:focus
       outline: none
+  input[name=query]
+      width: 410px
+  input[name=location]
+      width: 345px
   input[type=submit]
     border: none
     height: 100%
