--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -8,12 +8,12 @@
         %li
           = link_to "", home_path, class: "logo"
         %li
-          %form.search-bar
-            %label{ for: "business" } Find
-            %input{ type: "text", id: "business", placeholder: "burgers, barbers, spas, handymen..." }
-            %label{ for: "place" } Near
-            %input{ type: "text", id: "place", placeholder: "Toronto, ON" }
-            %input{type: "submit", value: "Search"}
+          = form_tag search_businesses_path, method: 'get', class: 'search-bar' do
+            = label_tag :query, "Find"
+            = text_field_tag :query, nil, placeholder: "burgers, barbers, spas, handymen..."
+            = label_tag :location, "Near"
+            = text_field_tag :location, nil, placeholder: "Toronto, ON"
+            = submit_tag "Search"
         - if logged_in?
           %li
             = link_to user_path(current_user.id), class: "user-profile-button" do
