--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -19,10 +19,10 @@
                 %h4
                   = link_to review.business.name, business_path(review.business.id)
                 .price-category
-                  %span= "$" * review.business.price_range
+                  %span= "$" * (review.business.price_range || 0)
                   %a Day Spas
                 %p
-                  review.business.street_address
+                  = review.business.street_address
                   %br
                   = "Toronto, ON  #{review.business.postal_code}"
                   %br
