Rewrite db query for search

--- a/app/assets/stylesheets/business_index.sass
+++ b/app/assets/stylesheets/business_index.sass
@@ -16,6 +16,11 @@ div.location
     font-size: 21px
     line-height: 1.28571em
     font-weight: bold
+    display: inline-block
+  p
+    float: right
+    line-height: 28px
+    font-size: 14px
 main.business-list
   text-align: center
   > ul
