--- a/app/assets/stylesheets/business_show.sass
+++ b/app/assets/stylesheets/business_show.sass
@@ -24,11 +24,11 @@
         padding-left: 2px
         padding-bottom: 20px
     .price-category
-      span:first-child:after
+      a:first-of-type:before
         content: "."
         position: relative
         top: -4px
-        padding: 0 2px 0 6px
+        padding: 0 6px 0 2px
       padding-bottom: 20px
 
 .reviews
