--- a/app/views/shared/_pagination.html.haml
+++ b/app/views/shared/_pagination.html.haml
@@ -1,12 +1,12 @@
 .pagination
-  %span= "Page #{@page + 1} of #{@businesses.count / 10 + 1}"
+  %span= "Page #{@page + 1} of #{number_of_pages}"
   %ul
     - if @page > 0
       %li 
         = link_to "< Previous", pagination_path(@page)
-    - pagination_pages(@businesses).times do |n|
+    - pagination_pages.times do |n|
       %li{ class: current_page_class(n) }
         = link_to pagination_number(n), pagination_path(pagination_number(n))
-    - if @businesses.count / 10 > @page
+    - if number_of_pages > @page + 1
       %li
         = link_to "Next >", pagination_path(@page + 2)
