--- a/app/assets/stylesheets/business_show.sass
+++ b/app/assets/stylesheets/business_show.sass
@@ -24,11 +24,16 @@
         padding-left: 2px
         padding-bottom: 20px
     .price-category
+      a,
+      span
+        float: left
+      a
+        padding-left: 4px
       a:first-of-type:before
         content: "."
         position: relative
         top: -4px
-        padding: 0 6px 0 2px
+        padding: 0 4px 0 2px
       padding-bottom: 20px
 
 .reviews
