--- a/app/assets/stylesheets/user_profile.sass
+++ b/app/assets/stylesheets/user_profile.sass
@@ -65,6 +65,17 @@
     .review-business-info
       float: left
       padding-left: 10px
+      .price-category
+        a,
+        span
+          float: left
+        a
+          padding-left: 4px
+        a:first-of-type:before
+          content: "."
+          position: relative
+          top: -4px
+          padding: 0 4px 0 2px
   .stars + p
     display: inline-block
     font-size: 14px
