update asset pipeline

--- a/app/assets/stylesheets/business_index.sass
+++ b/app/assets/stylesheets/business_index.sass
@@ -88,6 +88,8 @@ main.business-list
         float: right
         font-size: 14px
         line-height: 16px
+        a
+          color: #0073bb
     .review
       text-align: left
       font-size: 13px
