--- a/app/assets/stylesheets/business_show.sass
+++ b/app/assets/stylesheets/business_show.sass
@@ -12,6 +12,7 @@
   .show-details
     float: left
     padding-left: 20px
+    width: 60%
     > h1
       font-size: 36px
       font-weight: bold
@@ -29,12 +30,21 @@
         float: left
       a
         padding-left: 4px
+        color: #0073bb
       a:first-of-type:before
         content: "."
         position: relative
         top: -4px
         padding: 0 4px 0 2px
       padding-bottom: 20px
+  .address-info
+    width: 20%
+    float: right
+    font-size: 16px
+    line-height: 18px
+    padding-top: 6px
+    a
+      color: #0073bb
 
 .reviews
   padding-top: 20px
