--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,7 +3,7 @@
     = link_to "", home_path
 -else
   %header
-    %div.banner
+    .banner
       %ul
         %li
           = link_to "", home_path, class: "logo"
