--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,4 +1,4 @@
-%section.home_main(style="background-image: url('images/home/#{@home_image}.jpg')")
+%section.home_main(style="background-image: url('/assets/home/#{@home_image}.jpg')")
   %div
     %nav.home-nav
       %ul.nav-left
