--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -1,9 +1,9 @@
 header.sign-up
   padding: 15px 0 
-  background: #d32323 url("/images/general/header_stars.png") no-repeat center
+  background: #d32323 image-url("general/header_stars.png") no-repeat center
   background-size: 1135px auto, 100%
   a
-    background-image: url("/images/general/logo.png")
+    background-image: image-url("general/logo.png")
     background-size: contain
     width: 80px
     height: 40px
@@ -14,7 +14,7 @@ header.sign-up
 div.banner
   padding: 15px 0 
   text-align: center
-  background: #d32323 url("/images/general/header_stars.png") no-repeat center
+  background: #d32323 image-url("general/header_stars.png") no-repeat center
   background-size: 1135px auto, 100%
   ul
     display: inline-block
@@ -38,7 +38,7 @@ div.banner
       &:hover
         background-color: #a71c1c
   a.logo
-    background-image: url("/images/general/logo.png")
+    background-image: image-url("general/logo.png")
     background-size: contain
     width: 80px
     height: 40px
@@ -79,7 +79,7 @@ div.banner
       background-color: #a71c1c
       color: #FFF
     .profile-button-logo
-      background-image: url("/images/general/user_medium_square.png")
+      background-image: image-url("general/user_medium_square.png")
       background-size: contain
       height: 36px
       width: 36px
