--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -11,7 +11,7 @@ section.home_main
     margin: 0 auto
 
 h1.logo
-  background-image: url("/images/general/logo.png")
+  background-image: image-url("general/logo.png")
   background-size: contain
   width: 160px
   height: 80px
@@ -85,3 +85,14 @@ nav.home-nav
     &:hover
       background-color: #BE2020
       cursor: pointer
+
+.bar
+  background-image: image-url("home/bar.jpg")
+.custard
+  background-image: image-url("home/custard.jpg")
+.ice_cream_sandwich
+  background-image: image-url("home/ice_cream_sandwich.jpg")
+.pasta
+  background-image: image-url("home/pasta.jpg")
+.plates
+  background-image: image-url("home/plates.jpg")
