update user profile banner image path

--- a/app/assets/stylesheets/user_profile.sass
+++ b/app/assets/stylesheets/user_profile.sass
@@ -5,7 +5,7 @@
     width: 960px
     padding: 0 20px
 .profile-banner
-  background-image: url(/images/general/stars-static.png)
+  background-image: image-url("general/stars-static.png")
   background-position: bottom
   background-size: 1400px 168px
   background-repeat: no-repeat
