--- a/app/views/businesses/index.html.haml
+++ b/app/views/businesses/index.html.haml
@@ -21,9 +21,9 @@
             .price-category
               - if business.price_range
                 %span= "$" * business.price_range
-              - Business.find(business.id).tags.each do |tag|
+              - business.tags.each do |tag|
                 = link_to tag.name, search_businesses_path(query: tag.name)
-                - unless Business.find(business.id).tags[-1] == tag
+                - unless business.tags[-1] == tag
                   %span ,
           .address-info
             %p
